--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <a href="">WebStudio</a>
         <!-- menu-->
         <ul>
-          <li><a href="">studio</a></li>
-          <li><a href="">portfolio</a></li>
+          <li><a href="index.html">studio</a></li>
+          <li><a href="portfolio.html">portfolio</a></li>
           <li><a href="">contact</a></li>
         </ul>
       </nav>
