ingreso del menu2 y primera imagen

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,35 @@
       </ul>
     </header>
 
+    <!-- main -->
+    <main>
+
+        <!-- MENU 2-->
+      <section>
+        <ul>
+          <li><a href="">Todo</a></li>
+          <li><a href="">Sitio-web</a></li>
+          <li><a href="">Aplicaciones</a></li>
+          <li><a href="">Diseño</a></li>
+          <li><a href="">Marketing</a></li>
+        </ul>
+      </section>
+
+      <!-- requirement section -->
+      <section>
+        <ul>
+            <li>
+            <button type="button"><img src="./images/project1.jpeg" alt="create code" width="300" />
+            <h2>Tecnoduck</h2>
+            <p>Sitio-web</p>
+            </button>
+            </li>
+        </ul>
+      </section>
 
 
 
+      <!-- footer -->
      <footer>
       <a href="">WebStudio</a>
 
