crar botones de imagenes

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,62 @@
             <p>Sitio-web</p>
             </button>
             </li>
+
+             <li>
+            <button type="button"><img src="./images/project2.jpeg" alt="create code" width="300" />
+            <h2>Póster de Nueva Orleans vs Estrella Dorada</h2>
+            <p>Diseño</p>
+            </button>
+            </li>
+
+             <li>
+            <button type="button"><img src="./images/project3.jpeg" alt="create code" width="300" />
+            <h2>Restaurante Seafood</h2>
+            <p>Aplicaciones</p>
+            </button>
+            </li>
+
+             <li>
+            <button type="button"><img src="./images/project4.jpeg" alt="create code" width="300" />
+            <h2>Proyecto Prime</h2>
+            <p>Marketing</p>
+            </button>
+            </li>
+
+             <li>
+            <button type="button"><img src="./images/project5.jpeg" alt="create code" width="300" />
+            <h2>Proyecto Cajas</h2>
+            <p>Aplicaciones</p>
+            </button>
+            </li>
+
+             <li>
+            <button type="button"><img src="./images/project6.jpeg" alt="create code" width="300" />
+            <h2>La inspiración no tiene límites</h2>
+            <p>Sitio-web</p>
+            </button>
+            </li>
+
+             <li>
+            <button type="button"><img src="./images/project7.jpeg" alt="create code" width="300" />
+            <h2>Edición Limitada</h2>
+            <p>Diseño</p>
+            </button>
+            </li>
+
+             <li>
+            <button type="button"><img src="./images/project8.jpeg" alt="create code" width="300" />
+            <h2>Proyecto LAB</h2>
+            <p>Marketing</p>
+            </button>
+            </li>
+
+             <li>
+            <button type="button"><img src="./images/project9.jpeg" alt="create code" width="300" />
+            <h2>Negocio en Crecimiento</h2>
+            <p>Aplicaciones</p>
+            </button>
+            </li>
         </ul>
       </section>
 
