cracion de clases clases

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,23 +7,24 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <title>portfolio</title>
   </head>
+
   <body>
      <!-- Header -->
-    <header>
-      <nav>
+     <header class="header-star">
+      <nav class="header-menu">
         <!-- logo-->
-        <a href="">WebStudio</a>
+        <a href="./index.html" class="Web-logo">WebStudio</a>
         <!-- menu-->
-        <ul>
-          <li><a href="index.html">studio</a></li>
-          <li><a href="portfolio.html">portfolio</a></li>
-          <li><a href="">contact</a></li>
+        <ul class="header-list">
+          <li class="menu-option"><a href="index.html" class="header-link-active">studio</a></li>
+          <li class="menu-option"><a href="portfolio.html" class="header-link">portfolio</a></li>
+          <li class="menu-option"><a href="" class="header-link">contact</a></li>
         </ul>
       </nav>
       <!-- contact -->
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+52 55 5529 6000</a></li>
+      <ul class="contact">
+        <li><a href="malito:info@example.com" class="tocontact">info@devstudio.com</a></li>
+        <li><a href="tel:=525555296000" class="tocontact">+52 55 5529 6000</a></li>
       </ul>
     </header>
 
@@ -31,17 +32,27 @@
     <main>
 
         <!-- MENU 2-->
-      <section>
-        <ul>
-          <li><a href="">Todo</a></li>
-          <li><a href="">Sitio-web</a></li>
-          <li><a href="">Aplicaciones</a></li>
-          <li><a href="">Diseño</a></li>
-          <li><a href="">Marketing</a></li>
+      <section class="filter">
+        <ul class="filter-list">
+          <li>
+            <button type="button" class="butt-1"><a href="">Todo</a></button>
+          </li>
+          <li>
+            <button type="button" class="butt-second"><a href="">Sitio-web</a></button>
+          </li>
+          <li>
+            <button type="button" class="butt-second"><a href="">Aplicaciones</a></button>
+          </li>
+          <li>
+            <button type="button" class="butt-second"><a href="">Diseño</a></button>
+          </li>
+          <li>
+            <button type="button" class="butt-second"><a href="">Marketing</a></button>
+          </li>
         </ul>
       </section>
 
-      <!-- requirement section -->
+      <!-- direct access -->
       <section>
         <ul>
             <li>
