--- a/index.html
+++ b/index.html
@@ -10,61 +10,64 @@
 
   <body>
     <!-- Header -->
-    <header>
-      <nav>
+    <header class="header-star">
+      <nav class="header-menu">
         <!-- logo-->
-        <a href="">WebStudio</a>
+        <a href="./index.html" class="Web-logo">WebStudio</a>
         <!-- menu-->
-        <ul>
-          <li><a href="index.html">studio</a></li>
-          <li><a href="portfolio.html">portfolio</a></li>
-          <li><a href="">contact</a></li>
+        <ul class="header-list">
+          <li class="menu-option"><a href="index.html" class="header-link-active">studio</a></li>
+          <li class="menu-option"><a href="portfolio.html" class="header-link">portfolio</a></li>
+          <li class="menu-option"><a href="" class="header-link">contact</a></li>
         </ul>
       </nav>
       <!-- contact -->
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+52 55 5529 6000</a></li>
+      <ul class="contact">
+        <li><a href="malito:info@example.com" class="tocontact">info@devstudio.com</a></li>
+        <li><a href="tel:=525555296000" class="tocontact">+52 55 5529 6000</a></li>
       </ul>
     </header>
 
     <!-- main -->
     <main>
       <!-- requirement section -->
-      <section>
-        <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-        <button type="button">request our service</button>
+      <section class="main-requeriment">
+        <h1 class="main-h1">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+        <button type="button"  class="main-button">request our service</button>
       </section>
       <!-- benefits section  -->
-      <section>
-        <ul>
-          <li>
-            <h3>ATENTION TO DETAILS</h3>
-            We delve into all the details and processes of your business, in
-            order to develop a customized solution.
+      <section class="main-benefits">
+        <ul class="benefits">
+          <li class="benefits-description">
+            <h3 class="main-benefits-h3">ATENTION TO DETAILS</h3>
+            <p class="main-benefits-p"> We delve into all the details and processes of your business, in
+            order to develop a customized solution.</p> 
           </li>
-          <li>
-            <h3>PUNTUALITY</h3>
+          <li class="benefits-description">
+            <h3 class="main-benefits-h3">PUNTUALITY</h3>
+            <p class="main-benefits-p">
             With us, you can feel safe and secure. An important principle of the
-            company: respect your time and respect the agreed deadlines.
+            company: respect your time and respect the agreed deadlines.</p>
           </li>
-          <li>
-            <h3>PLANNING</h3>
+          <li class="benefits-description">
+            <h3 class="main-benefits-h3">PLANNING</h3>
+            <p class="main-benefits-p">
             You will be able to observe and participate in every phase of the
-            development and application of solutions.
+            development and application of solutions.</p>
           </li>
-          <li>
-            <h3>MODERN TECHNOLOGY</h3>
+          <li class="benefits-description">
+            <h3 class="main-benefits-h3">MODERN TECHNOLOGY</h3>
+            <p class="main-benefits-p">
             We use innovative tools to solve assigned tasks. It's time to
-            simplify work processes.
+            simplify work processes.</p>
           </li>
         </ul>
       </section>
       <!-- What do we do -->
-      <section>
-        <h2>WHAT DO WE DO</h2>
+      <section class="what-do">
+        <h2 class="what-do-h2">WHAT DO WE DO</h2>
         <!-- images -->
-        <ul>
+        <ul class="what-do-images">
           <li>
             <img src="./images/image1.jpeg" alt="create code" width="300" />
           </li>
@@ -76,32 +79,33 @@
           </li>
         </ul>
       </section>
+
       <!-- our team -->
-      <section>
-        <h2>OUR TEAM</h2>
-        <ul>
-          <li>
+      <section class="our-team">
+        <h2 class="our-team-h2">OUR TEAM</h2>
+        <ul class="members">
+          <li class="teams">
             <img src="./images/team1.jpeg" alt="firs member" width="200" />
-            <h3>Cristopher Walker</h3>
-            <p>Product Desinger</p>
+            <h3 class="name">Cristopher Walker</h3>
+            <p class="profession">Product Desinger</p>
           </li>
 
-          <li>
+          <li class="teams">
             <img src="./images/team2.jpeg" alt="firs member" width="200" />
-            <h3>Carla Palacios</h3>
-            <p>frontend developer</p>
+            <h3 class="name">Carla Palacios</h3>
+            <p class="profession">frontend developer</p>
           </li>
 
-          <li>
+          <li class="teams">
             <img src="./images/team3.jpeg" alt="firs member" width="200" />
-            <h3>Mario Dorado</h3>
-            <p>Marketing</p>
+            <h3 class="name">Mario Dorado</h3>
+            <p class="profession">Marketing</p>
           </li>
 
-          <li>
+          <li class="teams">
             <img src="./images/team4.jpeg" alt="firs member" width="200" />
-            <h3>Pablo Mijangos</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Pablo Mijangos</h3>
+            <p class="profession">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -109,20 +113,20 @@
 
      <!-- footer -->
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html" class="Web-logo">>WebStudio</a>
 
       <address>
         <ul>
-          <li>
+          <li class="location">
             <a href="">Calz. Ticomán 500, Ciudad de México, CDMX, México</a>
           </li>
 
-          <li>
+          <li class="contact-footer">
             <a href="mailto:info@example.com">info@example.com</a>
           </li>
 
-          <li>
-            <a href="+525555296000">+52 55 5529 6000</a>
+          <li class="contact-footer">
+            <a href="tel:+525555296000">+52 55 5529 6000</a>
           </li>
         </ul>
       </address>
