--- a/portfolio.html
+++ b/portfolio.html
@@ -56,66 +56,56 @@
       <section>
         <ul>
             <li>
-            <button type="button"><img src="./images/project1.jpeg" alt="create code" width="300" />
+            <img src="./images/project1.jpeg" alt="create code" width="300" />
             <h2>Tecnoduck</h2>
             <p>Sitio-web</p>
-            </button>
             </li>
 
              <li>
-            <button type="button"><img src="./images/project2.jpeg" alt="create code" width="300" />
+            <img src="./images/project2.jpeg" alt="create code" width="300" />
             <h2>Póster de Nueva Orleans vs Estrella Dorada</h2>
             <p>Diseño</p>
-            </button>
             </li>
 
              <li>
-            <button type="button"><img src="./images/project3.jpeg" alt="create code" width="300" />
+            <img src="./images/project3.jpeg" alt="create code" width="300" />
             <h2>Restaurante Seafood</h2>
             <p>Aplicaciones</p>
-            </button>
             </li>
 
              <li>
-            <button type="button"><img src="./images/project4.jpeg" alt="create code" width="300" />
+            <img src="./images/project4.jpeg" alt="create code" width="300" />
             <h2>Proyecto Prime</h2>
             <p>Marketing</p>
-            </button>
             </li>
 
              <li>
-            <button type="button"><img src="./images/project5.jpeg" alt="create code" width="300" />
+            <img src="./images/project5.jpeg" alt="create code" width="300" />
             <h2>Proyecto Cajas</h2>
             <p>Aplicaciones</p>
-            </button>
             </li>
 
              <li>
-            <button type="button"><img src="./images/project6.jpeg" alt="create code" width="300" />
+            <img src="./images/project6.jpeg" alt="create code" width="300" />
             <h2>La inspiración no tiene límites</h2>
             <p>Sitio-web</p>
-            </button>
             </li>
 
              <li>
-            <button type="button"><img src="./images/project7.jpeg" alt="create code" width="300" />
+            <img src="./images/project7.jpeg" alt="create code" width="300" />
             <h2>Edición Limitada</h2>
             <p>Diseño</p>
-            </button>
             </li>
 
              <li>
-            <button type="button"><img src="./images/project8.jpeg" alt="create code" width="300" />
+            <img src="./images/project8.jpeg" alt="create code" width="300" />
             <h2>Proyecto LAB</h2>
-            <p>Marketing</p>
-            </button>
             </li>
 
              <li>
-            <button type="button"><img src="./images/project9.jpeg" alt="create code" width="300" />
+            <img src="./images/project9.jpeg" alt="create code" width="300" />
             <h2>Negocio en Crecimiento</h2>
             <p>Aplicaciones</p>
-            </button>
             </li>
         </ul>
       </section>
@@ -124,20 +114,20 @@
 
       <!-- footer -->
      <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html" class="Web-logo">>WebStudio</a>
 
       <address>
         <ul>
-          <li>
+          <li class="location">
             <a href="">Calz. Ticomán 500, Ciudad de México, CDMX, México</a>
           </li>
 
-          <li>
+          <li class="contact-footer">
             <a href="mailto:info@example.com">info@example.com</a>
           </li>
 
-          <li>
-            <a href="+525555296000">+52 55 5529 6000</a>
+          <li class="contact-footer">
+            <a href="tel:+525555296000">+52 55 5529 6000</a>
           </li>
         </ul>
       </address>
