--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnet" href="https://fonts.googleapis.com">
+    <link rel="preconnet" href="https://fonts.gstatic.com">
     <title>WebStudio</title>
   </head>
 
   <body>
-    <!-- Header -->
+    <!-- ENCABEZADO -->
     <header class="header-star">
       <nav class="header-menu">
         <!-- logo-->
@@ -23,49 +25,51 @@
       </nav>
       <!-- contact -->
       <ul class="contact">
-        <li><a href="malito:info@example.com" class="tocontact">info@devstudio.com</a></li>
+        <li><a href="mailto:info@example.com" class="tocontact">info@devstudio.com</a></li>
         <li><a href="tel:=525555296000" class="tocontact">+52 55 5529 6000</a></li>
       </ul>
     </header>
 
-    <!-- main -->
+    <!-- PRINCIPAL -->
     <main>
-      <!-- requirement section -->
+
+      <!-- TITULO PRINCIPAL -->
       <section class="main-requeriment">
-        <h1 class="main-h1">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-        <button type="button"  class="main-button">request our service</button>
+        <h1 class="main-h1">SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+        <button type="button"  class="main-button">Solicite nuestro servicio</button>
       </section>
-      <!-- benefits section  -->
+
+      <!-- BENEFICIOS -->
       <section class="main-benefits">
         <ul class="benefits">
           <li class="benefits-description">
-            <h3 class="main-benefits-h3">ATENTION TO DETAILS</h3>
-            <p class="main-benefits-p"> We delve into all the details and processes of your business, in
-            order to develop a customized solution.</p> 
+            <h3 class="main-benefits-h3">ATENCIÓN A LOS DETALLES</h3>
+            <p class="main-benefits-p"> Nos adentramos en todos los detalles y procesos de su negocio, 
+              para así desarrollar una solución a su medida.</p> 
           </li>
           <li class="benefits-description">
-            <h3 class="main-benefits-h3">PUNTUALITY</h3>
+            <h3 class="main-benefits-h3">PUNTUALIDAD</h3>
             <p class="main-benefits-p">
-            With us, you can feel safe and secure. An important principle of the
-            company: respect your time and respect the agreed deadlines.</p>
+            Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la empresa: 
+            respetar su tiempo y respetar los plazos acordados.</p>
           </li>
           <li class="benefits-description">
-            <h3 class="main-benefits-h3">PLANNING</h3>
+            <h3 class="main-benefits-h3">PLANIFICACIÓN</h3>
             <p class="main-benefits-p">
-            You will be able to observe and participate in every phase of the
-            development and application of solutions.</p>
+            Usted podrá observar y participar en cada fase del desarrollo y aplicación de soluciones.</p>
           </li>
           <li class="benefits-description">
-            <h3 class="main-benefits-h3">MODERN TECHNOLOGY</h3>
+            <h3 class="main-benefits-h3">TEGNOLOGÍA MODERNA</h3>
             <p class="main-benefits-p">
-            We use innovative tools to solve assigned tasks. It's time to
-            simplify work processes.</p>
+            Usamos herramientas innovadoras para resolver las tareas asignadas. 
+            Es hora de simplificar los procesos laborales.</p>
           </li>
         </ul>
       </section>
+
       <!-- What do we do -->
       <section class="what-do">
-        <h2 class="what-do-h2">WHAT DO WE DO</h2>
+        <h2 class="what-do-h2">A qué nos dedicamos</h2>
         <!-- images -->
         <ul class="what-do-images">
           <li>
@@ -80,20 +84,20 @@
         </ul>
       </section>
 
-      <!-- our team -->
+      <!-- NUESTRO EQUIPO -->
       <section class="our-team">
-        <h2 class="our-team-h2">OUR TEAM</h2>
+        <h2 class="our-team-h2">NUESTRO EQUIPO</h2>
         <ul class="members">
           <li class="teams">
             <img src="./images/team1.jpeg" alt="firs member" width="200" />
-            <h3 class="name">Cristopher Walker</h3>
-            <p class="profession">Product Desinger</p>
+            <h3 class="name">Andrés Cubo</h3>
+            <p class="profession">Diseñador de Productos</p>
           </li>
 
           <li class="teams">
             <img src="./images/team2.jpeg" alt="firs member" width="200" />
             <h3 class="name">Carla Palacios</h3>
-            <p class="profession">frontend developer</p>
+            <p class="profession">Desarrolladora Frontend</p>
           </li>
 
           <li class="teams">
@@ -105,13 +109,13 @@
           <li class="teams">
             <img src="./images/team4.jpeg" alt="firs member" width="200" />
             <h3 class="name">Pablo Mijangos</h3>
-            <p class="profession">UI Designer</p>
+            <p class="profession">Diseñador IU </p>
           </li>
         </ul>
       </section>
     </main>
 
-     <!-- footer -->
+     <!-- PIE DE PÁGINA -->
     <footer>
       <a href="./index.html" class="Web-logo">>WebStudio</a>
 
