cambio de idioma

--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
     <!-- ENCABEZADO -->
     <header class="header-star">
       <nav class="header-menu">
-        <!-- logo-->
+
+        <!-- LOGO -->
         <a href="./index.html" class="Web-logo">WebStudio</a>
-        <!-- menu-->
+
+        <!-- MENU HEADER -->
         <ul class="header-list">
-          <li class="menu-option"><a href="index.html" class="header-link-active">studio</a></li>
-          <li class="menu-option"><a href="portfolio.html" class="header-link">portfolio</a></li>
-          <li class="menu-option"><a href="" class="header-link">contact</a></li>
+          <li class="menu-option"><a href="index.html" class="header-link-active">Estudio</a></li>
+          <li class="menu-option"><a href="portfolio.html" class="header-link">Portafolio</a></li>
+          <li class="menu-option"><a href="" class="header-link">Сontactos</a></li>
         </ul>
       </nav>
-      <!-- contact -->
+
+      <!-- CONTACTO HEADER -->
       <ul class="contact">
         <li><a href="mailto:info@example.com" class="tocontact">info@devstudio.com</a></li>
         <li><a href="tel:=525555296000" class="tocontact">+52 55 5529 6000</a></li>
@@ -67,10 +70,10 @@
         </ul>
       </section>
 
-      <!-- What do we do -->
+      <!-- A QUE NOS DEDICAMOS -->
       <section class="what-do">
         <h2 class="what-do-h2">A qué nos dedicamos</h2>
-        <!-- images -->
+        <!-- IMAGENES  -->
         <ul class="what-do-images">
           <li>
             <img src="./images/image1.jpeg" alt="create code" width="300" />
