cambios en el index

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnet" href="https://fonts.googleapis.com">
-    <link rel="preconnet" href="https://fonts.gstatic.com">
+    <link rel="preconnet" href="https://fonts.googleapis.com"/>
+    <link rel="preconnet" href="https://fonts.gstatic.com"/>
     <title>WebStudio</title>
   </head>
 
   <body>
     <!-- ENCABEZADO -->
-    <header class="header-star">
+    <header class="page-header">
       <nav class="header-menu">
 
         <!-- LOGO -->
@@ -20,9 +20,9 @@
 
         <!-- MENU HEADER -->
         <ul class="header-list">
-          <li class="menu-option"><a href="index.html" class="header-link-active">Estudio</a></li>
-          <li class="menu-option"><a href="portfolio.html" class="header-link">Portafolio</a></li>
-          <li class="menu-option"><a href="" class="header-link">Сontactos</a></li>
+          <li><a href="index.html" class="header-link">Estudio</a></li>
+          <li><a href="portfolio.html" class="header-link">Portafolio</a></li>
+          <li><a href="" class="header-link">Сontactos</a></li>
         </ul>
       </nav>
 
@@ -120,7 +120,7 @@
 
      <!-- PIE DE PÁGINA -->
     <footer>
-      <a href="./index.html" class="Web-logo">>WebStudio</a>
+      <a href="./index.html" class="Web-logo">WebStudio</a>
 
       <address>
         <ul>
