--- a/portfolio.html
+++ b/portfolio.html
@@ -5,115 +5,159 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>portfolio</title>
+    <link rel="preconnet" href="https://fonts.googleapis.com" />
+    <link rel="preconnet" href="https://fonts.gstatic.com" />
+    <title>Portafolio</title>
   </head>
 
   <body>
-     <!-- Header -->
-     <header class="header-star">
+    <!-- ENCABEZADO -->
+    <header class="header-star">
       <nav class="header-menu">
-        <!-- logo-->
+        <!-- LOGO -->
         <a href="./index.html" class="Web-logo">WebStudio</a>
-        <!-- menu-->
+
+        <!-- MENU HEADER -->
         <ul class="header-list">
-          <li class="menu-option"><a href="index.html" class="header-link-active">studio</a></li>
-          <li class="menu-option"><a href="portfolio.html" class="header-link">portfolio</a></li>
-          <li class="menu-option"><a href="" class="header-link">contact</a></li>
+          <li class="menu-option">
+            <a href="index.html" class="header-link-active">Estudio</a>
+          </li>
+
+          <li class="menu-option">
+            <a href="portfolio.html" class="header-link">Portafolio</a>
+          </li>
+
+          <li class="menu-option">
+            <a href="" class="header-link">Сontactos</a>
+          </li>
         </ul>
       </nav>
-      <!-- contact -->
+
+      <!-- CONTACTO -->
       <ul class="contact">
-        <li><a href="malito:info@example.com" class="tocontact">info@devstudio.com</a></li>
-        <li><a href="tel:=525555296000" class="tocontact">+52 55 5529 6000</a></li>
+        <li>
+          <a href="malito:info@example.com" class="tocontact"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:=525555296000" class="tocontact">+52 55 5529 6000</a>
+        </li>
       </ul>
     </header>
 
-    <!-- main -->
+    <!-- PRINCIPAL -->
     <main>
-
-        <!-- MENU 2-->
+      <!-- MENU 2-->
       <section class="filter">
         <ul class="filter-list">
           <li>
             <button type="button" class="butt-1"><a href="">Todo</a></button>
           </li>
           <li>
-            <button type="button" class="butt-second"><a href="">Sitio-web</a></button>
+            <button type="button" class="butt-second">
+              <a href="">Sitio-web</a>
+            </button>
           </li>
           <li>
-            <button type="button" class="butt-second"><a href="">Aplicaciones</a></button>
+            <button type="button" class="butt-second">
+              <a href="">Aplicaciones</a>
+            </button>
           </li>
           <li>
-            <button type="button" class="butt-second"><a href="">Diseño</a></button>
+            <button type="button" class="butt-second">
+              <a href="">Diseño</a>
+            </button>
           </li>
           <li>
-            <button type="button" class="butt-second"><a href="">Marketing</a></button>
+            <button type="button" class="butt-second">
+              <a href="">Marketing</a>
+            </button>
           </li>
         </ul>
       </section>
 
-      <!-- direct access -->
+      <!-- IMAGENES  -->
       <section>
         <ul>
-            <li>
-            <img src="./images/project1.jpeg" alt="create code" width="300" />
-            <h2>Tecnoduck</h2>
-            <p>Sitio-web</p>
-            </li>
+          <li>
+            <a href="#" class="link">
+              <img src="./images/project1.jpeg"alt="project Tecnoduck" width="300"/>
+              <h2 class="title-image">Tecnoduck</h2>
+              <p class="">Sitio-web</p>
+            </a>
+          </li>
 
-             <li>
-            <img src="./images/project2.jpeg" alt="create code" width="300" />
-            <h2>Póster de Nueva Orleans vs Estrella Dorada</h2>
-            <p>Diseño</p>
-            </li>
+          <li>
+            <a href="#" class="link">
+              <img
+                src="./images/project2.jpeg" alt="project poster" width="300"/>
+              <h2 class="title-image"> Póster de Nueva Orleans vs Estrella Dorada</h2>
+              <p>Diseño</p>
+            </a>
+          </li>
 
-             <li>
-            <img src="./images/project3.jpeg" alt="create code" width="300" />
-            <h2>Restaurante Seafood</h2>
-            <p>Aplicaciones</p>
-            </li>
+          <li>
+            <a href="#" class="link">
+              <img src="./images/project3.jpeg" alt="Restaurant" width="300" />
+              <h2 class="title-image">Restaurante Seafood</h2>
+              <p>Aplicaciones</p>
+            </a>
+          </li>
 
-             <li>
-            <img src="./images/project4.jpeg" alt="create code" width="300" />
-            <h2>Proyecto Prime</h2>
-            <p>Marketing</p>
-            </li>
+          <li>
+            <a href="#" class="link">
+              <img src="./images/project4.jpeg" alt="Project Prime" width="300" />
+              <h2 class="titel-image">Proyecto Prime</h2>
+              <p>Marketing</p>
+            </a>
+          </li>
 
-             <li>
-            <img src="./images/project5.jpeg" alt="create code" width="300" />
-            <h2>Proyecto Cajas</h2>
-            <p>Aplicaciones</p>
-            </li>
+          <li>
+            <a href="#" class="link">
+              <img src="./images/project5.jpeg" alt="project box" width="300" />
+              <h2 class="title-image">Proyecto Cajas</h2>
+              <p>Aplicaciones</p>
+            </a>
+          </li>
 
-             <li>
-            <img src="./images/project6.jpeg" alt="create code" width="300" />
-            <h2>La inspiración no tiene límites</h2>
-            <p>Sitio-web</p>
-            </li>
+          <li>
+            <a href="#" class="link">
+              <img src="./images/project6.jpeg" alt="whitout limit" width="300" />
+              <h2 class="title-image">La inspiración no tiene límites</h2>
+              <p>Sitio-web</p>
+            </a>
+          </li>
 
-             <li>
-            <img src="./images/project7.jpeg" alt="create code" width="300" />
-            <h2>Edición Limitada</h2>
-            <p>Diseño</p>
-            </li>
+          <li>
+            <a href="#" class="link">
+              <img src="./images/project7.jpeg" alt="limited edition" width="300" />
+              <h2 class="title-image">Edición Limitada</h2>
+              <p>Diseño</p>
+            </a>
+          </li>
 
-             <li>
-            <img src="./images/project8.jpeg" alt="create code" width="300" />
-            <h2>Proyecto LAB</h2>
-            </li>
+          <li>
+            <a href="#" class="link">
+              <img src="./images/project8.jpeg" alt="Project LAB" width="300" />
+              <h2 class="title-image">Proyecto LAB</h2>
+              <p>Marketing</p>
+            </a>
+          </li>
 
-             <li>
-            <img src="./images/project9.jpeg" alt="create code" width="300" />
-            <h2>Negocio en Crecimiento</h2>
-            <p>Aplicaciones</p>
-            </li>
+          <li>
+            <a href="#" class="link">
+              <img src="./images/project9.jpeg" alt="growing business" width="300" />
+              <h2 class="title-image">Negocio en Crecimiento</h2>
+              <p>Aplicaciones</p>
+            </a>
+          </li>
         </ul>
       </section>
+    </main>
 
-
-
-      <!-- footer -->
-     <footer>
+    <!-- PIE DE PÁGINA -->
+    <footer>
       <a href="./index.html" class="Web-logo">>WebStudio</a>
 
       <address>
@@ -132,6 +176,5 @@
         </ul>
       </address>
     </footer>
-
   </body>
 </html>
