--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="header-list">
           <li><a href="index.html" class="header-link">Estudio</a></li>
           <li><a href="portfolio.html" class="header-link">Portafolio</a></li>
-          <li><a href="" class="header-link">Сontactos</a></li>
+          <li><a href="" class="header-link">Contactos</a></li>
         </ul>
       </nav>
 
@@ -46,23 +46,23 @@
       <section class="main-benefits">
         <ul class="benefits">
           <li class="benefits-description">
-            <h3 class="main-benefits-h3">ATENCIÓN A LOS DETALLES</h3>
+            <h3 class="title-h3">ATENCIÓN A LOS DETALLES</h3>
             <p class="main-benefits-p"> Nos adentramos en todos los detalles y procesos de su negocio, 
               para así desarrollar una solución a su medida.</p> 
           </li>
           <li class="benefits-description">
-            <h3 class="main-benefits-h3">PUNTUALIDAD</h3>
+            <h3 class="title-h3">PUNTUALIDAD</h3>
             <p class="main-benefits-p">
             Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la empresa: 
             respetar su tiempo y respetar los plazos acordados.</p>
           </li>
           <li class="benefits-description">
-            <h3 class="main-benefits-h3">PLANIFICACIÓN</h3>
+            <h3 class="title-h3">PLANIFICACIÓN</h3>
             <p class="main-benefits-p">
             Usted podrá observar y participar en cada fase del desarrollo y aplicación de soluciones.</p>
           </li>
           <li class="benefits-description">
-            <h3 class="main-benefits-h3">TEGNOLOGÍA MODERNA</h3>
+            <h3 class="title-h3">TEGNOLOGÍA MODERNA</h3>
             <p class="main-benefits-p">
             Usamos herramientas innovadoras para resolver las tareas asignadas. 
             Es hora de simplificar los procesos laborales.</p>
@@ -72,7 +72,7 @@
 
       <!-- A QUE NOS DEDICAMOS -->
       <section class="what-do">
-        <h2 class="what-do-h2">A qué nos dedicamos</h2>
+        <h2 class="title-h2">A qué nos dedicamos</h2>
         <!-- IMAGENES  -->
         <ul class="what-do-images">
           <li>
@@ -89,7 +89,7 @@
 
       <!-- NUESTRO EQUIPO -->
       <section class="our-team">
-        <h2 class="our-team-h2">NUESTRO EQUIPO</h2>
+        <h2 class="title-h2">NUESTRO EQUIPO</h2>
         <ul class="members">
           <li class="teams">
             <img src="./images/team1.jpeg" alt="firs member" width="200" />
