cambios de nombre de clase

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 
   <body>
     <!-- ENCABEZADO -->
-    <header class="header-star">
+    <header class="page-header">
       <nav class="header-menu">
         <!-- LOGO -->
         <a href="./index.html" class="Web-logo">WebStudio</a>
