--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
 
       <address>
         <ul>
-          <li class="location">
-            <a href="">Calz. Ticomán 500, Ciudad de México, CDMX, México</a>
+          <li class="location-footer">
+            <a href="#" class="location-link">Calz. Ticomán 500, Ciudad de México, CDMX, México</a>
           </li>
 
           <li class="contact-footer">
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:info@example.com" class="link-contact">info@example.com</a>
           </li>
 
           <li class="contact-footer">
-            <a href="tel:+525555296000">+52 55 5529 6000</a>
+            <a href="tel:+525555296000" class="link-contact">+52 55 5529 6000</a>
           </li>
         </ul>
       </address>
