diseño de html y portafolio en css

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <!-- NUESTRO EQUIPO -->
       <section class="our-team">
-        <h2 class="title-h2">NUESTRO EQUIPO</h2>
+        <h2 class="title-h2">Nuestro Equipo</h2>
         <ul class="members">
           <li class="teams">
             <img src="./images/team1.jpeg" alt="firs member" width="200" />
