--- a/portfolio.html
+++ b/portfolio.html
@@ -52,26 +52,26 @@
       <section class="filter">
         <ul class="filter-list">
           <li>
-            <button type="button" class="butt-1"><a href="">Todo</a></button>
+            <button type="button" class="butt-first"><a href="" class="text">Todo</a></button>
           </li>
           <li>
             <button type="button" class="butt-second">
-              <a href="">Sitio-web</a>
+              <a href="" class="text-black">Sitio-web</a>
             </button>
           </li>
           <li>
             <button type="button" class="butt-second">
-              <a href="">Aplicaciones</a>
+              <a href="" class="text-black">Aplicaciones</a>
             </button>
           </li>
           <li>
             <button type="button" class="butt-second">
-              <a href="">Diseño</a>
+              <a href="" class="text-black">Diseño</a>
             </button>
           </li>
           <li>
             <button type="button" class="butt-second">
-              <a href="">Marketing</a>
+              <a href="" class="text-black">Marketing</a>
             </button>
           </li>
         </ul>
@@ -84,7 +84,7 @@
             <a href="#" class="link">
               <img src="./images/project1.jpeg"alt="project Tecnoduck" width="300"/>
               <h2 class="title-image">Tecnoduck</h2>
-              <p class="">Sitio-web</p>
+              <p class="description">Sitio-web</p>
             </a>
           </li>
 
@@ -93,7 +93,7 @@
               <img
                 src="./images/project2.jpeg" alt="project poster" width="300"/>
               <h2 class="title-image"> Póster de Nueva Orleans vs Estrella Dorada</h2>
-              <p>Diseño</p>
+              <p class="description">Diseño</p>
             </a>
           </li>
 
@@ -101,15 +101,15 @@
             <a href="#" class="link">
               <img src="./images/project3.jpeg" alt="Restaurant" width="300" />
               <h2 class="title-image">Restaurante Seafood</h2>
-              <p>Aplicaciones</p>
+              <p class="description">Aplicaciones</p>
             </a>
           </li>
 
           <li>
             <a href="#" class="link">
               <img src="./images/project4.jpeg" alt="Project Prime" width="300" />
-              <h2 class="titel-image">Proyecto Prime</h2>
-              <p>Marketing</p>
+              <h2 class="title-image">Proyecto Prime</h2>
+              <p class="description">Marketing</p>
             </a>
           </li>
 
@@ -117,7 +117,7 @@
             <a href="#" class="link">
               <img src="./images/project5.jpeg" alt="project box" width="300" />
               <h2 class="title-image">Proyecto Cajas</h2>
-              <p>Aplicaciones</p>
+              <p class="description">Aplicaciones</p>
             </a>
           </li>
 
@@ -125,7 +125,7 @@
             <a href="#" class="link">
               <img src="./images/project6.jpeg" alt="whitout limit" width="300" />
               <h2 class="title-image">La inspiración no tiene límites</h2>
-              <p>Sitio-web</p>
+              <p class="description">Sitio-web</p>
             </a>
           </li>
 
@@ -133,7 +133,7 @@
             <a href="#" class="link">
               <img src="./images/project7.jpeg" alt="limited edition" width="300" />
               <h2 class="title-image">Edición Limitada</h2>
-              <p>Diseño</p>
+              <p class="description">Diseño</p>
             </a>
           </li>
 
@@ -141,7 +141,7 @@
             <a href="#" class="link">
               <img src="./images/project8.jpeg" alt="Project LAB" width="300" />
               <h2 class="title-image">Proyecto LAB</h2>
-              <p>Marketing</p>
+              <p class="description">Marketing</p>
             </a>
           </li>
 
@@ -149,7 +149,7 @@
             <a href="#" class="link">
               <img src="./images/project9.jpeg" alt="growing business" width="300" />
               <h2 class="title-image">Negocio en Crecimiento</h2>
-              <p>Aplicaciones</p>
+              <p class="description">Aplicaciones</p>
             </a>
           </li>
         </ul>
@@ -158,20 +158,20 @@
 
     <!-- PIE DE PÁGINA -->
     <footer>
-      <a href="./index.html" class="Web-logo">>WebStudio</a>
+      <a href="./index.html" class="Web-logo">WebStudio</a>
 
       <address>
         <ul>
-          <li class="location">
-            <a href="">Calz. Ticomán 500, Ciudad de México, CDMX, México</a>
+          <li class="location-footer">
+            <a href="#" class="location-link">Calz. Ticomán 500, Ciudad de México, CDMX, México</a>
           </li>
 
           <li class="contact-footer">
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:info@example.com" class="link-contact">info@example.com</a>
           </li>
 
           <li class="contact-footer">
-            <a href="tel:+525555296000">+52 55 5529 6000</a>
+            <a href="tel:+525555296000" class="link-contact">+52 55 5529 6000</a>
           </li>
         </ul>
       </address>
